...
                        <Text>{content}</Text>
                    }
                </View>   
                <IconButton
                    icon='close-circle-outline'
                    onPress={hideNotification}
                    testID='notification-close-button'
                />
            </View>
 
        </Animated.View>

    )
...
